installed postcss-cli

--- a/front-end/src/styles/output.css
+++ b/front-end/src/styles/output.css
@@ -1010,6 +1010,11 @@
       border-color: var(--color-gray-300);
     }
   }
+  .truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .overflow-auto {
     overflow: auto;
   }
